removed unimportant git stuff

--- a/SpaceShoter/ExEn 1.0.2/BlankGame/BlankGame-MonoTouch.csproj
+++ b/SpaceShoter/ExEn 1.0.2/BlankGame/BlankGame-MonoTouch.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Properties\SpriteStripAnimationHandler.cs" />
     <Compile Include="Properties\Entities\Interactable\Bullet.cs" />
     <Compile Include="Properties\Entities\TouchScreenObj.cs" />
+    <Compile Include="Properties\Entities\TitleScreen.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\Entities\" />
