--- a/SpaceShoter/ExEn 1.0.2/BlankGame/Info.plist
+++ b/SpaceShoter/ExEn 1.0.2/BlankGame/Info.plist
@@ -23,5 +23,24 @@
 	</array>
 	<key>UIAppFonts</key>
 	<array/>
+	<key>UIStatusBarTintParameters</key>
+	<dict>
+		<key>UINavigationBar</key>
+		<dict>
+			<key>Style</key>
+			<string>UIBarStyleDefault</string>
+			<key>Translucent</key>
+			<false/>
+			<key>TintColor</key>
+			<dict>
+				<key>Red</key>
+				<real>0</real>
+				<key>Green</key>
+				<real>0</real>
+				<key>Blue</key>
+				<real>1</real>
+			</dict>
+		</dict>
+	</dict>
 </dict>
 </plist>
