--- a/SpaceShoter/ExEn 1.0.2/BlankGame/BlankGame-MonoTouch.csproj
+++ b/SpaceShoter/ExEn 1.0.2/BlankGame/BlankGame-MonoTouch.csproj
@@ -117,6 +117,8 @@
     <Compile Include="Properties\FontLoader\FontRender.cs" />
     <Compile Include="Content\Options.cs" />
     <Compile Include="Properties\Button\Button.cs" />
+    <Compile Include="Properties\Entities\Interactable\PowerUp.cs" />
+    <Compile Include="Properties\Entities\ChargeBullet.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\Entities\" />
@@ -128,15 +130,13 @@
     <Folder Include="Properties\FontLoader\" />
     <Folder Include="Content\Music\" />
     <Folder Include="Properties\Button\" />
+    <Folder Include="Content\Sounds\" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Content\Ship.png" />
     <BundleResource Include="Content\Bullet.png" />
     <BundleResource Include="Content\Enemy.png" />
     <BundleResource Include="Content\partical.png" />
-    <BundleResource Include="Content\explosion.wav">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </BundleResource>
     <BundleResource Include="Content\blueGUI.png" />
     <BundleResource Include="Content\Fonts\2p.png" />
     <BundleResource Include="Content\Music\Alpha Black Magic.mp3">
@@ -167,11 +167,11 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </BundleResource>
     <BundleResource Include="Content\incre.png" />
+    <BundleResource Include="Content\Sounds\explosion.wav">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </BundleResource>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\shoot.wav">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <Content Include="Content\Fonts\PressStart2P.bmp">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -179,6 +179,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Fonts\2pFont.fnt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Sounds\shoot.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
