--- a/SpaceShoter/ExEn 1.0.2/BlankGame/BlankGame-MonoTouch.csproj
+++ b/SpaceShoter/ExEn 1.0.2/BlankGame/BlankGame-MonoTouch.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Properties\Button\Button.cs" />
     <Compile Include="Properties\Entities\Interactable\PowerUp.cs" />
     <Compile Include="Properties\Entities\ChargeBullet.cs" />
+    <Compile Include="Properties\Entities\Interactable\Enemies\EnemyShooter.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\Entities\" />
