--- a/SpaceShoter/ExEn 1.0.2/BlankGame/Info.plist
+++ b/SpaceShoter/ExEn 1.0.2/BlankGame/Info.plist
@@ -2,10 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleDisplayName</key>
-	<string>Blank Game</string>
-	<key>CFBundleIdentifier</key>
-	<string>net.andrewrussell.exendev.blankgame</string>
 	<key>MinimumOSVersion</key>
 	<string>3.0</string>
 	<key>UIDeviceFamily</key>
@@ -42,5 +38,18 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>CFBundleIconFiles</key>
+	<array>
+		<string>Icon</string>
+		<string>Icon@2x</string>
+		<string>Icon-72</string>
+		<string>Icon-72@2x</string>
+	</array>
+	<key>CFBundleIdentifier</key>
+	<string>JohnErdogan</string>
+	<key>CFBundleDisplayName</key>
+	<string>Commander Cat Hat</string>
+	<key>UIStatusBarHidden</key>
+	<true/>
 </dict>
 </plist>
