--- a/SpaceShoter/ExEn 1.0.2/BlankGame/BlankGame-MonoTouch.csproj
+++ b/SpaceShoter/ExEn 1.0.2/BlankGame/BlankGame-MonoTouch.csproj
@@ -220,6 +220,7 @@
     <BundleResource Include="Content\Stars\Star2.png" />
     <BundleResource Include="Content\Stars\Star3.png" />
     <BundleResource Include="Content\Title\Title.png" />
+    <BundleResource Include="Content\Stars\ScrollStar.png" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\Fonts\PressStart2P.bmp">
